Fix empty lines in diff in focus theme
I hid all <br> elements in #moin-modify because I'm usually
working with margins while others are working with <br>s
to asjust spacing between elements.

In this case this led to missing new lines in the diff (they were
not visible for users).

Since visible new lines in the diff are more important than spaces
and I don't know for which <br>s I created that rule specifically
I just remove that line.

--- a/src/moin/themes/focus/static/css/theme.css
+++ b/src/moin/themes/focus/static/css/theme.css
@@ -202,8 +202,6 @@ div.warning > ul, div.warning > p { padding-left: 30pt; }
 .moin-tab-titles a.moin-current-tab { background-color: #b3b3b3; margin: 0pt; }
 .moin-tab-titles a.moin-current-tab:hover { background-color: #b3b3b3; cursor: default; }
 
-#moin-modify br { display: none; }
-
 #moin-usersettings .moin-float-fix { display: flex; justify-content: end; }
 #usersettings_ui { width: fit-content; }
 #moin-usersettings form { width: fit-content; margin: 0 auto; }
